--- a/templates/discussion/edit.html.twig
+++ b/templates/discussion/edit.html.twig
@@ -9,5 +9,8 @@
 
     <a href="{{ path('discussion_index') }}">back to list</a>
 
+    {% if is_granted('ROLE_ADMIN') %}
     {{ include('discussion/_delete_form.html.twig') }}
+    {% endif %}
+
 {% endblock %}
