--- a/templates/theme/index.html.twig
+++ b/templates/theme/index.html.twig
@@ -9,9 +9,9 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>actions</th>
+                <th>{{ 'Name' | trans }}</th>
+                <th>{{ 'Description' | trans }}</th>
+                <th>{{'actions' | trans }}</th>
             </tr>
         </thead>
         <tbody>
