creation des formulaires utilisateurs

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,6 +7,8 @@
 <a href="{{ path('user_index') }}">Gestion des utilisateurs</a><br>
 <a href="{{ path('theme_index') }}">Gestion des thèmes</a><br>
 <a href="{{ path('discussion_index') }}">Gestion des discussions</a><br>
-<a href="{{ path('message_index') }}">Gestion des messages</a>
+<a href="{{ path('message_index') }}">Gestion des messages</a><br>
+<a href="{{ path('commentaire_index') }}">Gestion des commentaires</a>
+
 
 {% endblock %}
