--- a/templates/home/discussions.html.twig
+++ b/templates/home/discussions.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
   <ul>
-  {{ dump(discussions) }}
     {% for discussion in discussions %}
     <li><a href="{{ path('message_visu', {'id': discussion.id})}}"> {{ discussion.title }}</a></li>
     {% endfor %}
   </ul>
+  <a href="{{ path('discussion_create', {'slug': theme_slug}) }}">Créer une discussion</a>
 {% endblock %}
