--- a/templates/home/discussions.html.twig
+++ b/templates/home/discussions.html.twig
@@ -6,5 +6,6 @@
     <li><a href="{{ path('message_visu', {'id': discussion.id})}}"> {{ discussion.title }}</a></li>
     {% endfor %}
   </ul>
-  <a href="{{ path('discussion_create', {'slug': theme_slug}) }}">Créer une discussion</a>
+  <a href="{{ path('discussion_create', {'slug': theme_slug}) }}">Créer une discussion</a><br>
+  <a href="{{ path('home')}}">Retour</a>
 {% endblock %}
