--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,34 +41,23 @@
     <!--<button class="nav"> FRUITS&LÉGUMES </button>
     <button class="nav"> MOIS&SAISONS </button>
     <button class="nav"> PROPRIÉTÉS </button>-->
-            <div id="bouton_accueil">
+        <div id="bouton_accueil">
 
          <ul>
-          <li class="main_button"><a href="#">FRUITS&LÉGUMES</a>
-            <ul class="LesBoutons">
-              <li><a href="#">Banane</a></li>
-              <li><a href="#">Grenade</a></li>
-              <li><a href="#">kiwi</a></li>
-            </ul>
+          <li class="main_button"><a href="#">FRUITS DU MOIS</a>
+            <ul class="LesBoutons"></ul>
           </li>
 
-          <li class="main_button"><a href="#">MOIS&SAISONS</a>
-            <ul class="LesBoutons">
-              <li><a href="#">Juin</a></li>
-              <li><a href="#">Été</a></li>
-
-            </ul>
+          <li class="main_button"><a href="#">PLANNING DES FRUITS</a>
+            <ul class="LesBoutons"></ul>
           </li>
 
-          <li class="main_button"><a href="#"> PROPRIÉTÉS</a>
-            <ul class="LesBoutons">
-              <li><a href="#"> Chiantise</a></li>
-              <li><a href="#"> mal de tête </a></li>
-              <li><a href="#"> Syndrome des Francais</a></li>
-            </ul>
+          <li class="main_button"><a href="#">FORUM</a>
+            <ul class="LesBoutons"></ul>
           </li>
         </ul>
       </div>
+
       </div>
 
   </div>
