--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,6 +16,11 @@
 
 
   <div class="pageHome">
+      <div class="container-burger" onclick="myFunction(this)">
+        <div class="rond1"></div>
+        <div class="rond2"></div>
+        <div class="rond3"></div>
+      </div>
 
       <div class="menu">
           <a href="{{path ('home') }}">HOME</a>
@@ -44,15 +49,15 @@
         <div id="bouton_accueil">
 
          <ul>
-          <li class="main_button"><a href="#">FRUITS DU MOIS</a>
+          <li class="main_button"><a href="#lienPageFruit">FRUITS DU MOIS</a>
             <ul class="LesBoutons"></ul>
           </li>
 
-          <li class="main_button"><a href="#">PLANNING DES FRUITS</a>
+          <li class="main_button"><a href="#lienPageMois">CALENDRIER</a>
             <ul class="LesBoutons"></ul>
           </li>
 
-          <li class="main_button"><a href="#">FORUM</a>
+          <li class="main_button"><a href="#lienPageForum">FORUM</a>
             <ul class="LesBoutons"></ul>
           </li>
         </ul>
@@ -63,6 +68,7 @@
   </div>
 
   <div class="pageFruitsduMois">
+
     <h2 id="lienPageFruit">FRUITS & LEGUMES DU MOIS </h2>
 
 <div class="greenBox">
