--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,23 +4,32 @@
 
 {% block stylesheets %}
 {{parent()}}
-<meta name="viewport" content="width=device-width, initial-scale=1.0"
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+<script src="script/script.js">
+
+</script>
+
 {% endblock %}
-
-
 
 
 {% block body %}
 
-
   <div class="pageHome">
-      <div class="container-burger" onclick="myFunction(this)">
+      <div class="hover-on-me">
         <div class="rond1"></div>
         <div class="rond2"></div>
         <div class="rond3"></div>
       </div>
+
+      <div class='hidden'>
+
+      </div>
+
+
+
 
       <div class="menu">
           <a href="{{path ('home') }}">HOME</a>
