--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Roboto', sans-serif;
 }
 
 a{
@@ -48,6 +49,29 @@ table {
 }
 
 /* FIN DU RESET*/
+
+/* Menu hover */
+.hover-on-me {
+    width: 200px;
+    height: 200px;
+    background-color: #00f;
+    opacity: 1;
+    transition: 0.5s ease-in;
+    color: #fff;
+}
+
+.hidden {
+    width: 200px;
+    height: 200px;
+    background-color: #0ff;
+    opacity: 0;
+    transition: 0.5s ease-in;
+    color: #fff;
+}
+
+.show-me {
+    opacity: 1;
+}
 
 .page1{
   margin-top: 12%;
@@ -97,7 +121,6 @@ table {
 
 body {
  background-color: #79f481;
- font-family: Verdana, sans-serif;
  font-size: 100%;
  width:100%;
  }
