--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -130,6 +130,12 @@
         </div></a>
     </div>
 </div>
+</div>
+
+  <div class="footer">
+    <p> Copyright © 2019 All rights reserved </p>
+    <p> Created by Audrey Gazza & Océane Allix </p>
+  </div>
 
 {% endblock %}
 
