--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,10 @@ table {
 }
 
 /* FIN DU RESET*/
+@font-face{
+	font-family: "Roboto";
+	src: url('Roboto-Regular.ttf');
+}
 
 .page1{
   margin-top: 12%;
@@ -97,7 +101,6 @@ table {
 
 body {
  background-color: #79f481;
- font-family: Verdana, sans-serif;
  font-size: 100%;
  width:100%;
  }
@@ -223,7 +226,6 @@ h3{
 .FORUM {
 	background-color: white;
 	width: 100%;
- 	padding-bottom:50px;
   }
 
 .forum_container{
@@ -270,4 +272,15 @@ margin-left: 20%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+}
+
+.footer{
+	background-color:#9b9b9b;
+	margin-top: 10px;
+	padding-top: 10px;
+	margin-bottom: 0px;
+}
+.footer p{
+	text-align: center;
+	padding-bottom: 10px;
 }
