box fruit et legumes

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -83,8 +83,28 @@
       <div class="greenOne"></div>
       <div class="greenTwo"></div>
       <div class="greenThree"></div>
+      <div class="greenThree"></div>
+      <div class="greenTwo"></div>
+      <div class="greenOne"></div>
       <div class="greenOne"></div>
       <div class="greenTwo"></div>
+      <div class="greenThree"></div>
+      <div class="greenThree"></div>
+      <div class="greenTwo"></div>
+      <div class="greenOne"></div>
+      <div class="greenOne"></div>
+      <div class="greenTwo"></div>
+      <div class="greenThree"></div>
+      <div class="greenThree"></div>
+      <div class="greenTwo"></div>
+      <div class="greenOne"></div>
+      <div class="greenOne"></div>
+      <div class="greenTwo"></div>
+      <div class="greenThree"></div>
+      <div class="greenThree"></div>
+      <div class="greenTwo"></div>
+      <div class="greenOne"></div>
+
     </div>
   </div>
 
