--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,6 +220,8 @@ h3{
 @media only screen and (max-width: 478px) {
 }
 
+/*PAGE FRUIT ET LEGUMES */
+
 .pageFruitsduMois {
 	background-color: white;
 	width: 100%;
@@ -229,11 +231,10 @@ h3{
 .greenBox{
 	display: grid;
 	grid-template-columns:   200px 200px 200px 200px 200px ;
-	grid-template-rows: 200px 200px 200px 200px 200px ;
+	grid-template-rows: 100px 300px 300px 300px ;
 	justify-content: center;
 	margin: 100px;
 	}
-
 
 .greenOne{
 	background-color: green;
