mis à jour des fichiers

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -88,14 +88,18 @@
         <div class="col-lg-4 mb-4">
           <img src="{{ asset('img/icone-coeur.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_coeur_conso'}) }}">
-          <div class="texte">COUP D'COEUR CONSO <p> Paratgez vos coups de coeur cuisine, legumes ou producteurs.</p>
+          <div class="texte">
+          <h4>COUP D'COEUR CONSO</h4>
+          <p> Paratgez vos coups de coeur cuisine, legumes ou producteurs.</p>
           </div></a>
         </div>
 
         <div class="col-lg-4 mb-4">
           <img src="{{ asset('img/icone-gueule.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_gueule_conso'}) }}">
-          <div class="texte">COUP D'GUEULE CONSO <p> Vous avez reperé des
+          <div class="texte">
+          <h4>COUP D'GUEULE CONSO</h4>
+          <p> Vous avez reperé des
           arnaques ou des prosuits de mauvaise qualité. Faites en part.</p>
           </div></a>
         </div>
@@ -103,14 +107,18 @@
         <div class="col-lg-4 mb-4">
           <img src="{{ asset('img/icone-bonplan.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'bons_plans'}) }}">
-            <div class="texte">BONS PLANS <p> Partagez ici les bons plans que vous avez repéré</p>
+            <div class="texte">
+            <h4>BONS PLANS</h4>
+            <p> Partagez ici les bons plans que vous avez repéré</p>
             </div>
           </a>
         </div>
         <div class="col-lg-4 mb-4">
             <img src="{{ asset('img/icone-avis.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'avis_sur_produits'}) }}">
-            <div class="texte">AVIS PRODUITS & MARQUES <p> Aidez nous a
+            <div class="texte">
+            <h4>AVIS PRODUITS & MARQUES</h4>
+            <p> Aidez nous a
             consommer responsable.N’hesitez pas à partager circuit courts et trouvailles</p>
             </div></a>
         </div>
@@ -118,7 +126,9 @@
         <div class="col-lg-4 mb-4">
             <img src="{{ asset('img/icone-conseil.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'conseil'}) }}">
-            <div class="texte">CONSEILS&ASTUCES <p> Partagez ici les conseils cuisine achat ou consommation</p>
+            <div class="texte">
+            <h4>CONSEILS&ASTUCES</h4>
+            <p> Partagez ici les conseils cuisine achat ou consommation</p>
             </div></a>
         </div>
 
