--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,7 +50,7 @@
   </nav>
   <!-- end menu -->
   <!-- bloc Titre et boutons -->
-  <div class="jumbotron">
+  <div class="">
     <h1 class="display-4" id="lienPageHome">VEGGIZ</h1>
     <h3 class="lead">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
 
@@ -140,7 +140,7 @@
 
   <div class="footer footer-copyright text-center py-3">
     <p> Copyright © 2019 All rights reserved </p>
-    <p> Created by Audrey Gazza & Océane Allix </p> 
+    <p> Created by Audrey Gazza & Océane Allix </p>
   </div>
 
   <!-- formulaire de register (masqué au départ. S'affichera en popup lors du click -->
