--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,27 +54,8 @@ table {
 	src: url('Roboto-Regular.ttf');
 }
 
-/* Menu hover */
-.hover-on-me {
-    width: 200px;
-    height: 200px;
-    background-color: #00f;
-    opacity: 1;
-    transition: 0.5s ease-in;
-    color: #fff;
-}
-
-.hidden {
-    width: 200px;
-    height: 200px;
-    background-color: #0ff;
-    opacity: 0;
-    transition: 0.5s ease-in;
-    color: #fff;
-}
-
-.show-me {
-    opacity: 1;
+.container-fluid{
+	padding: 0;
 }
 
 .page1{
@@ -231,7 +212,7 @@ h3{
 .pageFruitsduMois {
 	background-color: white;
 	width: 100%;
- 	padding-bottom:50px;
+
   }
 
 .greenBox{
