--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -94,7 +94,7 @@
           </div></a>
         </div>
 
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 mb-4-s-12">
           <img src="{{ asset('img/icone-gueule.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_gueule_conso'}) }}">
           <div class="texte">
@@ -140,7 +140,7 @@
 
   <div class="footer footer-copyright text-center py-3">
     <p> Copyright © 2019 All rights reserved </p>
-    <p> Created by Audrey Gazza & Océane Allix </p> 
+    <p> Created by Audrey Gazza & Océane Allix </p>
   </div>
 
   <!-- formulaire de register (masqué au départ. S'affichera en popup lors du click -->
